--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -47,9 +47,28 @@
 }
 
 .about-hero__subtitle {
-    font-size: 1.125rem;
-    color: var(--text-secondary);
+    font-size: 1.25rem;
+    color: var(--primary);
+    font-weight: 600;
     line-height: 1.7;
+    margin-bottom: 2rem;
+}
+
+.about-hero__description {
+    max-width: 800px;
+    margin: 0 auto;
+    text-align: left;
+}
+
+.about-hero__description p {
+    font-size: 1.1rem;
+    color: var(--text-secondary);
+    line-height: 1.8;
+    margin-bottom: 1.25rem;
+}
+
+.about-hero__description p:last-child {
+    margin-bottom: 0;
 }
 
 /* Stats */
